Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-111515

New Material 3 TextField placeholder text does not work with smaller heights

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P1: Critical P1: Critical
    • 6.5.0, 6.5.1, 6.6.0
    • 6.5.0 Beta3
    • Quick: Controls 2
    • None
    • All
    • 4f5b4f81b (dev), 12b6cd9fa (6.5), 0ad27eac4 (6.5.0)

      I need the TextField to be smaller, so I can fit it inside my submenu. It should be easily fixable to take the height of the control into account when doing the animation.

      ScreenPlay_ALWYfV6thZ.mp4

        For Gerrit Dashboard: QTBUG-111515
        # Subject Branch Project Status CR V

            mitch_curtis Mitch Curtis
            kelteseth Elias Steurer
            Votes:
            1 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes