Material: fix placeholder text y position when control is too small

Ensure that it's sensibly positioned despite its size.

Fixes: QTBUG-111515
Pick-to: 6.5 6.5.0
Change-Id: I71816c461ff1d2f85e010bf871ab1b7ef2ccaf6e
Reviewed-by: Oliver Eftevaag <oliver.eftevaag@qt.io>