src/quickcontrols/material/TextArea.qml
@@ -50,6 +50,7 @@ T.TextArea {
         controlHasActiveFocus: control.activeFocus
         controlHasText: control.length > 0
         controlImplicitBackgroundHeight: control.implicitBackgroundHeight
+        controlHeight: control.height
     }
 
     background: MaterialTextContainer {
